--- a/Public/style.css
+++ b/Public/style.css
@@ -1,66 +1,101 @@
+@font-face {
+  font-family: 'Lato';
+  src: url('./fonts/lato/Lato-Regular.ttf');
+}
+
 body {
-  font: 1em sans-serif;
-  background: rgb(204,204,204);
-background: linear-gradient(90deg, #5f6368 0%, rgba(255,255,255,1) 50%);
-  width: 100%;
+  width: 98%;
+  height: 100%;
+  margin: auto;
+  font: 1rem Lato;
+  border: 10px solid #402874;
   overflow: hidden;
 }
 .cv {
-  width: 90%;
+  width: 100%;
   height: auto;
   margin: auto;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  border: 5px solid #b9aed0;
 }
 .presentation {
-  width: 98%;
-  margin: auto;
+  width: 100%;
+  height: 15%;
+  margin: 0;
   display: flex;
   flex-direction: row;
+  background-color: #402874;
 }
-.presentation__name {
-  font: 3em bold;
+.presentation__text {
+  color: #fff;
   width: 50%;
-  margin-right: 3rem;
+  margin: auto;
+  padding: 2em;
 }
 .presentation__picture {
   width: 20%;
   height: 20%;
-  border: 3px solid #b9aed0;
+  margin: 1em 1em 1em 5em;
+  border: 3px solid #fff;
+  background-color: #fff;
   border-radius: 20%;
 }
+.presentation__bloc {
+  display: flex;
+  justify-content: flex-end;
+  height: auto;
+  color: #fff;
+  background-color: #402874;
+}
 .presentation__list {
-  width: 25%;
-  margin: 3em auto;
+  width: auto;
+  margin: 1em;
   list-style-type: none;
-  ;
 }
 .presentation__list__items {
-  margin: .2em;
+  margin: 0.2em;
 }
 .title {
   width: 100%;
-  margin: .2em auto;
+  margin: 0.2em auto;
   text-align: center;
   font: 2em bold;
 }
 .main {
   display: flex;
+  flex-direction: row-reverse;
+  width: 95%;
+  margin: auto;
+  padding: 1em;
+  border-top: 3px solid #402874;
 }
-.experience, .formation {
-  width: 50%;
-  height: 100%;
+.experience,
+.formation {
   margin: 0 auto;
-  padding: .5em;
-  border-top: 3px solid #b9aed0;
+  padding: 0.5em;
 }
-.experience__title, .formation__title {
-  font-size: 1.5em;
+.experience {
+  width: 70%;
 }
-.experience__subtitle, .formation__subtitle {
+.formation {
+  width: 30%;
+  border-right: 3px solid #402874;
+}
+.experience__title,
+.formation__title {
+  font-size: 2em;
+  color: #402874;
+  margin: 0 .5em .5em;
+}
+.experience__subtitle,
+.formation__subtitle {
+  font-size: 1.2em;
+  margin-bottom: .8em;
   text-decoration: underline;
+}
+.formation__detail,
+.experience__detail {
+  margin: .5em 0;
 }
 .formation__techno {
   display: flex;
@@ -68,10 +103,10 @@ background: linear-gradient(90deg, #5f6368 0%, rgba(255,255,255,1) 50%);
 .formation__logo {
   width: 10%;
   height: auto;
-  margin: .5em;
+  margin: 0.5em;
 }
 .formation__logo-react {
   width: 20%;
   height: auto;
-  margin: .5em;
+  margin: 0.5em;
 }
